# learn-gravity

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmake.sh  genmake.sh  run.sh
src/: main.c  test.gr
src/gravity/: debug_macros.h  gravity_array.h  gravity_ast.c  gravity_ast.h  gravity_codegen.c  gravity_codegen.h  gravity_compiler.c  gravity_compiler.h  gravity_config.h  gravity_core.c  gravity_core.h  gravity_debug.c  gravity_debug.h  gravity_delegate.h  gravity_hash.c  gravity_hash.h  gravity_ircode.c  gravity_ircode.h  gravity_json.c  gravity_json.h  gravity_lexer.c  gravity_lexer.h  gravity_macros.h  gravity_memory.c  gravity_memory.h  gravity_opcodes.h  gravity_opt_env.c  gravity_opt_env.h  gravity_opt_file.c  gravity_opt_file.h  gravity_opt_json.c  gravity_opt_json.h  gravity_opt_math.c  gravity_opt_math.h  gravity_optimizer.c  gravity_optimizer.h  gravity_optionals.h  gravity_parser.c  gravity_parser.h  gravity_semacheck1.c  (+16 more)
